# FitFolio

./: .editorconfig  .env.example  .eslint.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  ARCHITECTURE_ASSESSMENT.md  Claude.md  Makefile  README.md  RUNBOOK.md  compose.dev.yml  compose.prod.yml  compose.staging.yml  docker-compose.yml  env.example  fitfolio_infra_plan.md  pyproject.toml
backend/: .dockerignore  CSRF_INTEGRATION.md  Dockerfile  Dockerfile.prod  alembic.ini  coverage.json  coverage_all_auth.json  coverage_baseline.json  coverage_email.json  coverage_final.json  coverage_integration.json  coverage_magic.json  coverage_phase2_combined.json  coverage_updated.json  coverage_with_integration.json  coverage_with_webauthn.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: challenge_storage.py  cleanup.py  email.py  rate_limiter.py  redis_client.py  secrets.py  security.py  session_rotation.py  webauthn.py
backend/app/db/: database.py
backend/app/middleware/: csrf.py  rate_limit.py  request_id.py
backend/app/observability/: logging.py  otel.py
backend/migrations/: env.py
backend/migrations/versions/: 27175cb3061e_init_schema.py  99026bfb08b8_initial_auth_tables.py  (+2 more)
backend/tests/: README.md  __init__.py  conftest.py  test_account_lockout.py  test_api_contract.py  test_audit_logging.py  test_auth_authorization.py  test_auth_edge_cases.py  test_auth_email_capture.py  test_auth_endpoints.py  test_auth_error_paths.py  test_auth_integration.py  test_auth_magic_link_happy_paths.py  test_auth_magic_link_start.py  test_auth_real_integration.py  test_auth_session_management.py  test_auth_user_endpoints.py  test_auth_webauthn_happy_paths.py  test_auth_webauthn_integration.py  test_auth_webauthn_no_mocks.py  test_auth_webauthn_registration.py  test_csrf.py  test_deps.py  test_email_verification.py  test_rate_limiting.py  test_security.py  test_session_management.py  test_session_rotation.py
(+242 files in other folders)
