[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitfolio-backend"
version = "0.1.0"
description = "FitFolio Backend API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "W", "ARG", "C4", "DTZ", "TCH", "Q"]
# B008 is ignored because FastAPI Depends() is a special case - it's designed to be used
# in function defaults and is not a mutable default issue
ignore = ["B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
